Arrow added to tickets page // still need to work on overflow issue

--- a/scss/theme/page/_sponsors.scss
+++ b/scss/theme/page/_sponsors.scss
@@ -124,6 +124,7 @@
 
 					h3 {
 						padding-left: 50%;
+						text-align: left;
 
 					}
 			
