--- a/scss/theme/page/_tickets.scss
+++ b/scss/theme/page/_tickets.scss
@@ -30,6 +30,7 @@ $table-border: $dark;
 
 #tickets-on-sale {
 
+	overflow: hidden;
 	height: inherit;
 
 	.tickets-message {
@@ -39,19 +40,59 @@ $table-border: $dark;
 	    position: relative;
 	    vertical-align: middle;
 	    margin-bottom:40px;
+	    position: relative;
+	}
+
+	.tickets-message:after {
+		border-left: 350px solid transparent;
+	    border-right: 350px solid transparent;
+	    border-top: 40px solid $fountain-blue;
+	    left: 50%;
+	    top: 100%;
+	    position: absolute;
+	    content: '';
+	    transform: translateX(-50%);
+	
+	}
+
+	.tickets-table {
+		padding-top: 60px;
+	}
+
+	@media screen and (min-width: 768px) {
+
+		height: 400px;
+
+		.tickets-message:after {
+			border-bottom: 200px solid transparent;
+		    border-top: 200px solid transparent;
+		    border-left: 40px solid $fountain-blue;
+		    left: 100%;
+		    top: 0;
+		    transform: translateX(0);
+
+		}
+
+		.tickets-table {
+			padding-left: 70px;
+			padding-top: 0px;
+
+		}
+
 	}
 
 	.tickets-column {
-		height: 100%;
+		height: 400px;
 	}
 
 }
 
 
 
-div.v-center.blueBox {
-	padding-top: 40px;
-	padding-bottom: 20px;
+.v-center {
+	position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 
 }
 
